fix: spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1359,6 +1359,10 @@ footer a:hover {
     margin: 0px;
   }
 
+  .main-img img {
+    object-position: top left;
+  }
+
   .large-pic {
     width: auto;
     background-image: url("images/iceland.png");
